--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -155,9 +155,9 @@ $max-width: $x-large !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow: 150px !default; //200 150
-$right-sidebar-width: 240px !default; //300 240 
-$right-sidebar-width-wide: 300px !default; //400 300
+$right-sidebar-width-narrow: 100px !default; //200 >> 150
+$right-sidebar-width: 200px !default; //300 >> 240 
+$right-sidebar-width-wide: 250px !default; //400 >> 300
 
 /*
    Other
