--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -88,4 +88,22 @@ layout: default
       </div>
     </div>
   {% endif %}
+  ß
+  <div style="text-align: center;">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4190423385846615"
+      crossorigin="anonymous"></script>
+    <!-- 디스플레이 -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-4190423385846615"
+        data-ad-slot="8115463009"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
 </div>
+
+
+
