feat: comment 기능 추가

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -90,5 +90,10 @@ layout: default
   {% endif %}
 </div>
 
-
-
+<script src="https://utteranc.es/client.js"
+        repo="ParkSomin23/parksomin23.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
