feat: 댓글 기능 다시 확인

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -178,3 +178,12 @@
       {% include /comments-providers/custom.html %}
   {% endcase %}
 </div>
+
+<script src="https://utteranc.es/client.js"
+        repo="ParkSomin23/parksomin23.github.io"
+        issue-term="pathname"
+        label="comments"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
