feat: 댓글 issue title 변경

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -173,7 +173,7 @@
       <section id="utterances-comments">
         <script src="https://utteranc.es/client.js"
                 repo="ParkSomin23/parksomin23.github.io"
-                issue-term="pathname"
+                issue-term="title"
                 label="comments"
                 theme="github-light"
                 crossorigin="anonymous"
